############################################################
#
# Copyright 2017, 2019, 2020, 2021, 2022, 2023, 2024, 2025 Mohammed El-Afifi
# This file is part of processorSim.
#
# processorSim is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# processorSim is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with processorSim.  If not, see <http://www.gnu.org/licenses/>.
#
############################################################
[project]
name = "processorsim"
version = "0.1.0"
description = "A simulator for program execution on pipelined processors"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "networkx",
    "pyyaml",
    "more-itertools",
    "fastcore",
    "pydash",
    "typer",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pyright]
ignore = ["tests"]
typeCheckingMode = "basic"

[dependency-groups]
test = [
    "pytest-cov",
    "pytest-mypy",
    "nbconvert",
    "types-pyyaml",
    "pyright==1.1.386",
    "ruff>=0.14.10",
]
dev = [
    { include-group = "test" },
    "ipykernel",
    "rope",
]

[tool.ruff]
# Global setting for line length
line-length = 79
# Tells Ruff where your source code lives for import resolution
src = ["src"]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
# 1. Enable Pylint (PL) and isort (I) rules
# 'E' and 'F' are Ruff's defaults; we add 'PL' and 'I' for your import needs.
select = ["E", "F", "PL", "I"]

# 2. Directory-specific overrides
# In Ruff, we use per-file-ignores to suppress everything EXCEPT your enabled rules.
[tool.ruff.lint.per-file-ignores]
"src/**" = [
    "F", "E", # Disable default Flake8 checks in src/
]
"tests/**" = [
    "PLR2004",
]

[tool.ruff.lint.isort]
# Configures the 'wrong-import-order' replacement
known-first-party = ["src"]
split-on-trailing-comma = false

[tool.uv]
package = true
